# estuda-ai-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: server.py
app/api/V1/controllers/: __init__.py  questionsController.py
app/api/V1/schemas/requests/: __init__.py  correctionRequest.py  createQuestionsRequest.py
app/api/V1/service/: __init__.py  questionsServices.py
app/config/: __init__.py  environmentVariables.py
app/core/: __init__.py  factory.py
app/core/models/: __init__.py  gptModel.py
devcontainer/: Dockerfile
