[project]
name = "estuda-ai-api"
version = "0.1.0"
description = "This application uses AI to generate custom ENEM (National High School Exam) questions, helping users prepare for the exam with tailored practice. It creates multiple-choice questions based on the exam's content areas and varying difficulty levels."
authors = [
    {name = "Everton Martins Simões Fernandes",email = "evertonmsf@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.5,<0.116.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
